--- a/components/java-springboot-xnetcceo/overlays/development/deployment-patch.yaml
+++ b/components/java-springboot-xnetcceo/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-springboot-xnetcceo
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/sjmrhtap/java-springboot-xnetcceo:3af8478689e50df9716958907758f60d925c6166@sha256:8649b41c7cd5f9a48cc557c4e9d56386ca01ce239666e4b15b399978764c0dac
+          name: container-image
