Promote to stage environment

--- a/components/java-springboot-xnetcceo/overlays/stage/deployment-patch.yaml
+++ b/components/java-springboot-xnetcceo/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
+      - image: quay.io/sjmrhtap/java-springboot-xnetcceo:8b224b6624c8105a8cd217e04f43b9da5ac26e02@sha256:e6a57eb418c31a004c34c5f06d9cba3b825d394eb4c5c641ae598431ca8f4745
         name: container-image  
